# mcp-api-experiment

./: .dockerignore  .gitignore  ARCHITECTURE.md  EXAMPLES.md  README.md  TESTING_PLAN.md  mcp-servers.json  pyproject.toml  test_agent_retry_workflow.py  test_executor_return.py  test_telemetry.py
calculator_demo/: README.md  calculator_server.py  generate_wrappers.py  generate_wrappers.sh  math_agent.py  mcp-servers.json  requirements.txt  test_infrastructure.py
calculator_demo/skills_test/math_operations/add_three_numbers/: .meta.json  README.md  __init__.py  main.py
docker/: Dockerfile  README.md
examples/: README.md  agent_discovery_pattern.py  basic_usage.py  checkpoint_demo.py  generate_servers.py  skill_persistence_demo.py
sql/: README.md  error_patterns.sql  health_snapshot.sql  recent_failures.sql  skill_dependencies.sql  skill_metrics.sql  tool_metrics.sql  tool_usage_over_time.sql
src/: __init__.py  cli.py  generate_servers.py  templates.py
src/mcp_skill_framework/: __init__.py  checkpoint_manager.py  cli.py  connector.py  database.py  executor.py  framework.py  runtime.py  skill_manager.py  telemetry.py  templates.py
tests/: test_basic.py  test_cli.py  test_connector.py  test_coverage_boost.py  test_framework.py  test_runtime.py  test_skill_manager_extended.py  test_templates.py
tests/fixtures/configs/: invalid-format.json  missing-required-fields.json  valid-multi-server.json  valid-single-server.json
tests/helpers/: assertions.py  test_utils.py
tests/mocks/: mock_client_session.py
